pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webapp-pod-yaml
  namespace: ns-dev-environment
  labels:
    app: webapp
    tier: frontend
    env: dev
  annotations:
    description: "Pod running frontend web application"
    owner: "santoshmohanty2511@gmail.com"

spec:
  # Defines which node to schedule this Pod on
  nodeSelector:
    kubernetes.io/hostname: mycluster-worker2

  # Restart policy: Always | OnFailure | Never
  restartPolicy: Always

  # Optional: ServiceAccount if RBAC is used
  serviceAccountName: default

  # Containers running inside this Pod
  containers:
    - name: nginx-container-pod
      image: nginx:1.25
      imagePullPolicy: IfNotPresent

      # Ports exposed by this container
      ports:
        - containerPort: 80
          name: http       #### port label we have assigned we can use it kind:Service .. use in targetport
          protocol: TCP
        - containerPort: 8080   #### For Metrics

      # Environment variables
      resources:
        requests:
          cpu: "100m"
          memory: "128Mi"
        limits:
          cpu: "250m"
          memory: "256Mi"

      # Liveness and Readiness Probes
      livenessProbe:
        httpGet:
          path: /
          port: 8080
        initialDelaySeconds: 10
        periodSeconds: 10
        failureThreshold: 3

      readinessProbe:
        httpGet:
          path: /
          port: 8080
        initialDelaySeconds: 5
        periodSeconds: 5

      # Volume mounts inside container
      volumeMounts:
        - name: html-volume       ### From the PVC 
          mountPath: /usr/share/nginx/html  ### This Path detail copied from here and pasted in PV path

        - name: secret-volume
          mountPath: /etc/secret

        - name: secret-volume     ### 2nd Way to assign config map or sceret
          mountPath: /etc/secret  ### in this case configmap or sceret copy the data from etcd and paste in this location.
                                  ### You can choose any path to paste
    - name: sidecar-logger
      image: busybox
      command: ["sh", "-c", "tail -f /var/log/nginx/access.log"]
      ports:
      - containerPort: 8080   ###Use a tool like nc or a lightweight web server and expose a port
      ### nc -lk -p 8080    ---- nc(netcat)
      
      volumeMounts:
        - name: html-volume
          mountPath: /var/log/nginx

  # Volumes shared by containers in the Pod
  volumes:
    - name: html-volume
      emptyDir: {}

    - name: secret-volume
      secret:
          secretName: my-secret

    - name: pv-vl
      persistentVolumeClaim:
        claimName: PVC-checked

    - name: sidecar-vl
      hostPath:
        path: /var/log/nginx
        type: DirectoryOrCreate
       
  # Optional: Tolerations and Affinity (for scheduling rules)
  tolerations:
    - key: "env"
      operator: "Equal"
      value: "dev"
      effect: "NoSchedule"

  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution: ##preferredDuringSchedulingIgnoredDuringExecution
        nodeSelectorTerms:
          - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                  - mycluster-worker2
