Serviceheadless.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  clusterIP: None       # This makes it "Headless"
  selector:
    app: mysql
  ports:
  - name: mysql
    port: 3306
    targetPort: 3306
