service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  namespace: dv
  labels:
    app: webapp
    tier: frontend
  annotations:
    description: "Service exposing webapp Deployment internally"
spec:
  selector:
    app: webapp          # Must match the labels of the Pods it routes traffic to

  type: ClusterIP         # Types: ClusterIP, NodePort, LoadBalancer, ExternalName
  ports:
    - name: http
      protocol: TCP
      port: 80            # Port exposed by the Service (inside cluster)
      targetPort: 80    # Pod containerPort (inside Pod)

    - name: https         ### used as reference to find this port if a 
                          ### Used mainly by Kubernetes or tools like Ingress/NLB 
                          ### when you have multiple ports in the same Service (e.g., http, https).
      protocol: TCP
      port: 443
      targetPort: 8443

    - name: metrics     
      port: 8080
      targetPort: 8080

# Kubernetes readiness/liveness probes use 8080

# Prometheus scrapes 9090

# Pods inside cluster call the service on 8080/9090

# You may manually port-forward 9090 for Grafana testing
